dev/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: dev-deployment
  namespace: dev

spec:
  replicas: 1
  
  selector:
    matchLabels:
      app: app-v1
      
  template:
    metadata:
      labels:
        app: app-v1
    spec:
      containers:
      - name: app-v1-container
        image: wil42/playground:v2
        ports:
        - containerPort: 8888
