dev/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: dev-service
  namespace: dev
  
spec:
  selector:
    app: app-v1

  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
      nodePort: 30010
      
  type: NodePort
